Added user counting

--- a/public/index.html
+++ b/public/index.html
@@ -32,5 +32,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- Ni nini ulikuwa unatafuta? -->
+    <!-- This counts the users coming to the site -->
+    <script data-goatcounter="https://finalyze.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
